# jimo

./: Cargo.toml  jimo.toml
jimo-conf/: Cargo.toml
jimo-conf/src/: config.rs  ctx.rs  error.rs  figment.rs  lib.rs
jimo-ctx/: Cargo.toml
jimo-ctx/src/: lib.rs
jimo-data/: Cargo.toml
jimo-data/src/model/: mod.rs
jimo-plugin/: Cargo.toml
jimo-plugin-pdk/: Cargo.toml
jimo-plugin/src/: binding.rs  config.rs  ctx.rs  lib.rs  plugin.rs  router.rs
jimo-plugin/wit/: world.wit
jimo-server/: Cargo.toml
jimo-server/src/: banner.rs  lib.rs  main.rs  router.rs
