[workspace]
resolver = "3"
members = ["jimo-conf", "jimo-ctx", "jimo-data", "jimo-plugin","jimo-server"]
[workspace.dependencies]
anyhow={version = "1.0.100"}
typedmap={version = "0.6.0"}
async-trait={version = "0.1.89"}
axum={version = "0.8.6"}
figment={version = "0.10.19"}
thiserror={version = "2.0.17"}
tokio={version = "1.47.1"}
serde={version = "1.0.228"}
serde_json={version = "1.0.145"}
tracing={version = "0.1.41"}
tracing-subscriber={version = "0.3.20"}
tower-http={version = "0.6.6"}
cfonts={version = "1.3.0"}
