[package]
name = "jimo-conf"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow={workspace = true}
async-trait={workspace = true}
figment={workspace = true,features = ["toml"]}
serde={workspace = true}
serde_json={workspace = true}
thiserror={workspace = true} 
jimo-ctx={path = "../jimo-ctx"}
