[package]
name = "jimo-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum={workspace = true,features = ["macros"]}
tokio={workspace = true,features = ["rt-multi-thread","signal"]}
jimo-conf={path = "../jimo-conf"}
jimo-ctx={path = "../jimo-ctx"}
serde={workspace = true,features = ["derive"]}
typedmap={workspace = true}
anyhow={workspace = true}
thiserror={workspace = true}
tracing={workspace = true}
tracing-subscriber={workspace = true}
tower-http={workspace = true,features = ["trace","timeout"]}
cfonts={workspace = true}
hyper={workspace = true}
tower={workspace = true}
hyper-util={workspace = true,features = ["server","server-graceful","server-auto"]}